new routine page

--- a/MauiTemplate/maui_template.csproj
+++ b/MauiTemplate/maui_template.csproj
@@ -66,6 +66,9 @@
 	  <MauiXaml Update="View\ExerciseForm.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="View\NewRoutineView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="View\RoutinesPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
