--- a/MauiTemplate/maui_template.csproj
+++ b/MauiTemplate/maui_template.csproj
@@ -24,11 +24,9 @@
 	<ItemGroup>
 		<!-- App Icon -->
 		<MauiIcon Include="Resources\appicon.svg" ForegroundFile="Resources\appiconfg.svg" Color="#512BD4" />
-		<MauiIcon Include="Resources\Icons\minus.svg" />
-		<MauiIcon Include="Resources\Icons\plus.svg" />
 
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\appiconfg.svg" Color="#435B66" />
+		<MauiSplashScreen Include="Resources\appiconfg.svg" Color="#424242" />
 
 		<!-- Images -->
 
@@ -49,13 +47,16 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <None Remove="Resources\Icons\minus.svg" />
-	  <None Remove="Resources\Icons\plus.svg" />
+	  <None Remove="Resources\Icons\bin.png" />
+	  <None Remove="Resources\Icons\minus.png" />
+	  <None Remove="Resources\Icons\plus.png" />
 	  <None Remove="View\appicon.svg" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiIcon Include="Resources\Icons\bin.svg" />
+	  <MauiImage Include="Resources\Icons\bin.png" />
+	  <MauiImage Include="Resources\Icons\minus.png" />
+	  <MauiImage Include="Resources\Icons\plus.png" />
 	</ItemGroup>
 
 	<ItemGroup>
